--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,12 @@ export(FTRGCGeneLevelData)
 export(FTRGCIsoformLevelData)
 export(ROGeneLevelData)
 export(ROIsoformLevelData)
+export(clear_osf_cache)
+export(list_osf_files)
+export(load_object)
+importFrom(BiocFileCache,BiocFileCache)
+importFrom(BiocFileCache,bfcadd)
+importFrom(BiocFileCache,bfcquery)
+importFrom(osfr,osf_download)
+importFrom(osfr,osf_ls_files)
+importFrom(osfr,osf_retrieve_node)
