fix bioconductor build errors
- Update LICENSE to DCF format required by R packages
- Add proper license declaration (MIT + file LICENSE)
- Add VignetteBuilder and vignette dependencies to DESCRIPTION
- Reorganize dependencies: move SummarizedExperiment to Depends, remove unused imports
- Add proper vignette metadata for indexing
- Add error handling in .onLoad for OSF network calls
- Import SummarizedExperiment in NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(ROIsoformLevelData)
 export(clear_osf_cache)
 export(list_osf_files)
 export(load_object)
+import(SummarizedExperiment)
 importFrom(BiocFileCache,BiocFileCache)
 importFrom(BiocFileCache,bfcadd)
 importFrom(BiocFileCache,bfcquery)
