--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,17 +6,23 @@ Authors@R: c(
     person("Sowmya", "Parthiban", email = "sparthi1@jhu.edu", role = c("aut", "cre")))
 Description: Dataset package containing gene and isoform count matrices,
   and sample metadata for long-read direct cDNA sequencing of human retinal organoid, 2D retinal ganglion cell cultures, and flowthrough from H9 and EP1 cell-lines.
-License: MIT
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 biocViews: ExperimentData, RNASeqData, ExpressionData, Homo_sapiens_Data, CellCulture
 RoxygenNote: 7.3.2
+Depends:
+    R (>= 4.4.0),
+    SummarizedExperiment
 Imports:
-    SummarizedExperiment,
-    S4Vectors,
     osfr,
-    utils,
     BiocFileCache
-Suggests: 
-    testthat
+Suggests:
+    testthat,
+    knitr,
+    rmarkdown,
+    dplyr,
+    ggplot2,
+    ggrepel
+VignetteBuilder: knitr
 
